# rust-obj-viewer

./: Cargo.toml
src/: camera.rs  engine.rs  instance.rs  light.rs  main.rs  model.rs  shader.wgsl  state.rs  texture.rs
